# ariac-2018_gear

./: .gitmodules  README.md
ariac_example/: package.xml
ariac_example/config/: sample_gear_conf.yaml
ariac_example/script/: tf2_example.py
ariac_example/src/: ariac_example_node.cpp
ariac_example/src/ariac_example/: ariac_example.py
osrf_gear/: CMakeLists.txt  package.xml
osrf_gear/config/: comp_conf1.yaml  example_custom_config.yaml  qual1a.yaml  qual1b.yaml  qual2a.yaml  qual2b.yaml  qual3a.yaml  qual3b.yaml  sample.yaml  sample_dropped_products.yaml  sample_flipped.yaml  sample_interruption1.yaml  sample_interruption2.yaml  sample_not_enough_products.yaml  sample_order_update.yaml  sample_scenario1.yaml  sample_scenario2.yaml  sample_scenario3.yaml  sample_scenario_drop.yaml  sample_sensor_blackout.yaml  sample_user_config.yaml
osrf_gear/config/finals/: final01.yaml  final03.yaml  final05.yaml  final06.yaml  final08.yaml  final10.yaml  final11.yaml  final13.yaml  final15.yaml
osrf_gear/config/quals/: qual1a.yaml  qual1b.yaml  qual2b.yaml
osrf_gear/include/: ConveyorBeltPlugin.hh  LockModelsTriggerPlugin.hh  ObjectDisposalPlugin.hh  ROSAGVPlugin.hh  ROSAriacKitTrayPlugin.hh  ROSAriacShippingBoxPlugin.hh  ROSDronePlugin.hh  ROSLaserPlugin.hh  ROSLogicalCameraPlugin.hh  SensorBlackoutPlugin.hh
osrf_gear/include/osrf_gear/: ARIAC.hh  AriacScorer.h  AriacShippingBox.h  ROSAriacTaskManagerPlugin.hh
osrf_gear/launch/: gear.launch.template  gear.urdf.xacro.template  gear_playback.launch  sample_environment.launch
osrf_gear/launch/linear_arm_actuator/: linear_arm_actuator.urdf.xacro
osrf_gear/launch/ur10/: ur10.xml
osrf_gear/launch/vacuum_gripper/: vacuum_gripper.urdf.xacro
osrf_gear/models/closed_box/: model.sdf
osrf_gear/models/conveyor_belt/: model.sdf
osrf_gear/models/conveyor_belt_ariac/: model.sdf
osrf_gear/models/conveyor_belt_tall_ariac/: model.sdf
osrf_gear/models/deletion_wall/: model.sdf
osrf_gear/models/disk_part_ariac/: model.sdf
osrf_gear/models/drone/: model.sdf
osrf_gear/models/drone_ariac/: model.sdf
osrf_gear/models/drone_ariac/meshes/: drone.mtl
osrf_gear/models/drone_with_box/: model.sdf
osrf_gear/models/gasket_part_ariac/: model.sdf
osrf_gear/models/gear_part_ariac/: model.sdf
osrf_gear/models/lock_models_trigger/: model.config  model.sdf
osrf_gear/models/logical_camera/: model.sdf
osrf_gear/models/open_box/: model.sdf
osrf_gear/models/out_chute/: model.config  model.sdf
osrf_gear/models/pulley_part_ariac/: model.sdf
osrf_gear/models/shipping_box_ariac/: model.config  model.sdf
osrf_gear/models/shipping_container/: model.config  model.sdf
osrf_gear/models/shipping_container/meshes/: ShippingContainer.mtl
osrf_gear/models/shipping_container_ariac/: model.sdf
osrf_gear/models/shipping_container_conveyor_ariac/: model.sdf
osrf_gear/models/swissranger_camera/: model.sdf
osrf_gear/models/workcell_ariac/: model.sdf
osrf_gear/models/yellow_bin/: model.sdf
osrf_gear/rviz/: ariac.rviz
osrf_gear/script/: gear.py
osrf_gear/src/: AriacScorer.cpp  AriacShippingBox.cpp  ConveyorBeltPlugin.cc  ConveyorCongestionPlugin.cc  LockModelsTriggerPlugin.cc  ObjectDisposalPlugin.cc  PopulationPlugin.cc  ROSAGVPlugin.cc  ROSAriacKitTrayPlugin.cc  ROSAriacShippingBoxPlugin.cc  ROSAriacTaskManagerPlugin.cc  ROSConveyorBeltPlugin.cc  ROSConveyorCongestionPlugin.cc  ROSConveyorControllerPlugin.cc  ROSDronePlugin.cc  ROSLaserPlugin.cc  ROSLogicalCameraPlugin.cc  ROSProximityRayPlugin.cc  SensorBlackoutPlugin.cc  SideContactPlugin.cc  ToggleVisualPlugin.cc  VacuumGripperPlugin.cc
osrf_gear/srv/: SubmitShipment.srv
osrf_gear/worlds/: gear.world.template
osrf_gear/worlds/snippet/: break_beam.sdf.template  camera.sdf.template  depth_camera.sdf.template  laser_profiler.sdf.template  logical_camera.sdf.template  proximity_sensor.sdf.template  quality_control_sensor.sdf.template  shipping_box.sdf.template
test_ariac/: CMakeLists.txt  ariac_example.test  ariac_rosapi.yaml  ariac_rosapi_development_mode.yaml  ariac_tf_frames.test  fill_demo_shipment.yaml  gripper_unthrottled.test  minimal_sample_unthrottled.yaml  product_drop_over_bins.yaml  product_drop_over_box.yaml  qual2a_testing.yaml  qual2b_testing.yaml  ros_api_checker  sensor_blackout.test  sensor_blackout.yaml  sensors.test  test_example_node.py  test_gripper.py  test_gripper_drop_over_bins.py  test_gripper_drop_over_box.py  test_gripper_unthrottled.py  test_scoring_after_waiting.py  test_scoring_against_expected_score.py  test_scoring_immediate.py  test_sensor_blackout.py  test_tf_frames.py  tf_sensors.yaml
test_ariac/test_scoring/: ariac_scoring_after_waiting.test  ariac_scoring_after_waiting_with_state_logging.test  ariac_scoring_correct_parts_incorrect_poses.test  ariac_scoring_correct_parts_not_flipped.test  ariac_scoring_correct_parts_plus_faulty.test  ariac_scoring_correct_parts_plus_unwanted.test  ariac_scoring_faulty_parts.test  ariac_scoring_faulty_parts_randomized.test  ariac_scoring_interrupted.test  ariac_scoring_low_priority_order.test  ariac_scoring_missing_parts.test  ariac_scoring_not_interrupted.test  ariac_scoring_perfect_shipment.test  ariac_scoring_perfect_shipment_flipped.test  ariac_scoring_updated_order.test  scoring_base_order.yaml  scoring_base_order_flipped.yaml  scoring_base_order_interrupted.yaml  scoring_base_order_updated.yaml  scoring_correct_parts_incorrect_poses.yaml  scoring_correct_parts_not_flipped.yaml  scoring_correct_parts_plus_faulty.yaml  scoring_correct_parts_plus_unwanted.yaml  scoring_faulty_parts.yaml  scoring_faulty_parts_randomized.yaml  scoring_missing_parts.yaml  scoring_partial_kit_both_trays.yaml  scoring_partial_shipment_both_shipments.yaml  scoring_perfect_kit.yaml  scoring_perfect_kit_both_trays.yaml  scoring_perfect_kit_flipped.yaml  scoring_perfect_shipment.yaml  scoring_perfect_shipment_both_shipments.yaml  scoring_perfect_shipment_flipped.yaml
